crates/vue_oxlint_jsx/src/test/snapshots/codegen/error_script_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async () => {
	const a = {
		b,
		c
	};
	<><template>
  <div></div>
</template>

<script setup></script>

<script></script>

<style></style>
</>;
};
