crates/vue_oxlint_jsx/src/test/snapshots/codegen/modules_basic_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
import { ref } from "vue";
export default { props: { msg: String } };
async () => {
	<><template>
  <div></div>
</template>

<script></script>
</>;
};
