crates/vue_oxlint_jsx/src/test/snapshots/codegen/modules_import_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
import { ref } from "vue";
async () => {
	<><template>
  <div></div>
</template>

<script></script>
</>;
};
