crates/vue_oxlint_jsx/src/test/snapshots/codegen/modules_no-imports_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async () => {
	<><template>
  <div></div>
</template>

<script lang="ts" setup></script>

<style></style>
</>;
};
