crates/vue_oxlint_jsx/src/test/snapshots/codegen/modules_setup_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
import { ref } from "vue";
async () => {
	export default {};
	<><template>
  <div></div>
</template>

<script setup></script>
</>;
};
