crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_basic_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

async()=>{const count = 1;<><template><div>{count}</div></template><script lang="js" setup></script><style></style></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 120,
        },
        original_span: Span {
            start: 0,
            end: 149,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 10,
            end: 26,
        },
        original_span: Span {
            start: 82,
            end: 98,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 28,
            end: 67,
        },
        original_span: Span {
            start: 0,
            end: 55,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 28,
            end: 38,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 29,
            end: 37,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 38,
            end: 56,
        },
        original_span: Span {
            start: 13,
            end: 43,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 38,
            end: 43,
        },
        original_span: Span {
            start: 13,
            end: 18,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 39,
            end: 42,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 43,
            end: 50,
        },
        original_span: Span {
            start: 23,
            end: 34,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 44,
            end: 49,
        },
        original_span: Span {
            start: 26,
            end: 31,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 50,
            end: 56,
        },
        original_span: Span {
            start: 37,
            end: 43,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 52,
            end: 55,
        },
        original_span: Span {
            start: 39,
            end: 42,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 56,
            end: 67,
        },
        original_span: Span {
            start: 44,
            end: 55,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 58,
            end: 66,
        },
        original_span: Span {
            start: 46,
            end: 54,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 67,
            end: 100,
        },
        original_span: Span {
            start: 57,
            end: 108,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 67,
            end: 91,
        },
        original_span: Span {
            start: 57,
            end: 81,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 68,
            end: 74,
        },
        original_span: Span {
            start: 58,
            end: 64,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 75,
            end: 84,
        },
        original_span: Span {
            start: 65,
            end: 74,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 75,
            end: 79,
        },
        original_span: Span {
            start: 65,
            end: 69,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 80,
            end: 84,
        },
        original_span: Span {
            start: 71,
            end: 73,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 85,
            end: 90,
        },
        original_span: Span {
            start: 75,
            end: 80,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 91,
            end: 100,
        },
        original_span: Span {
            start: 99,
            end: 108,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 93,
            end: 99,
        },
        original_span: Span {
            start: 101,
            end: 107,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 100,
            end: 115,
        },
        original_span: Span {
            start: 110,
            end: 148,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 100,
            end: 107,
        },
        original_span: Span {
            start: 110,
            end: 117,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 101,
            end: 106,
        },
        original_span: Span {
            start: 111,
            end: 116,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 107,
            end: 115,
        },
        original_span: Span {
            start: 140,
            end: 148,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 109,
            end: 114,
        },
        original_span: Span {
            start: 142,
            end: 147,
        },
    },
]
