crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_components_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

import SomeComponent from './SomeComponent.vue';import { motion } from 'motion-v';async()=>{<><template><SomeComponent></SomeComponent><SomeComponent></SomeComponent><Transition></Transition><Component></Component><motion.div></motion.div></template><script lang="ts" setup></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 288,
        },
        original_span: Span {
            start: 0,
            end: 265,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 48,
        },
        original_span: Span {
            start: 172,
            end: 220,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 48,
            end: 81,
        },
        original_span: Span {
            start: 221,
            end: 254,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 94,
            end: 250,
        },
        original_span: Span {
            start: 0,
            end: 145,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 94,
            end: 104,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 95,
            end: 103,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 104,
            end: 135,
        },
        original_span: Span {
            start: 13,
            end: 30,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 104,
            end: 119,
        },
        original_span: Span {
            start: 13,
            end: 30,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 105,
            end: 118,
        },
        original_span: Span {
            start: 14,
            end: 27,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 119,
            end: 135,
        },
        original_span: Span {
            start: 13,
            end: 30,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 121,
            end: 134,
        },
        original_span: Span {
            start: 15,
            end: 28,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 135,
            end: 166,
        },
        original_span: Span {
            start: 33,
            end: 51,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 135,
            end: 150,
        },
        original_span: Span {
            start: 33,
            end: 51,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 136,
            end: 149,
        },
        original_span: Span {
            start: 34,
            end: 48,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 150,
            end: 166,
        },
        original_span: Span {
            start: 33,
            end: 51,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 152,
            end: 165,
        },
        original_span: Span {
            start: 35,
            end: 49,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 166,
            end: 191,
        },
        original_span: Span {
            start: 54,
            end: 79,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 166,
            end: 178,
        },
        original_span: Span {
            start: 54,
            end: 66,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 167,
            end: 177,
        },
        original_span: Span {
            start: 55,
            end: 65,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 178,
            end: 191,
        },
        original_span: Span {
            start: 66,
            end: 79,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 180,
            end: 190,
        },
        original_span: Span {
            start: 68,
            end: 78,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 191,
            end: 214,
        },
        original_span: Span {
            start: 82,
            end: 105,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 191,
            end: 202,
        },
        original_span: Span {
            start: 82,
            end: 93,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 192,
            end: 201,
        },
        original_span: Span {
            start: 83,
            end: 92,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 202,
            end: 214,
        },
        original_span: Span {
            start: 93,
            end: 105,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 204,
            end: 213,
        },
        original_span: Span {
            start: 95,
            end: 104,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 214,
            end: 239,
        },
        original_span: Span {
            start: 108,
            end: 133,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 214,
            end: 226,
        },
        original_span: Span {
            start: 108,
            end: 120,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 215,
            end: 225,
        },
        original_span: Span {
            start: 109,
            end: 119,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 215,
            end: 221,
        },
        original_span: Span {
            start: 109,
            end: 115,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 222,
            end: 225,
        },
        original_span: Span {
            start: 116,
            end: 119,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 226,
            end: 239,
        },
        original_span: Span {
            start: 120,
            end: 133,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 228,
            end: 238,
        },
        original_span: Span {
            start: 122,
            end: 132,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 228,
            end: 234,
        },
        original_span: Span {
            start: 109,
            end: 115,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 235,
            end: 238,
        },
        original_span: Span {
            start: 116,
            end: 119,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 239,
            end: 250,
        },
        original_span: Span {
            start: 134,
            end: 145,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 241,
            end: 249,
        },
        original_span: Span {
            start: 136,
            end: 144,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 250,
            end: 283,
        },
        original_span: Span {
            start: 147,
            end: 264,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 250,
            end: 274,
        },
        original_span: Span {
            start: 147,
            end: 171,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 251,
            end: 257,
        },
        original_span: Span {
            start: 148,
            end: 154,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 258,
            end: 267,
        },
        original_span: Span {
            start: 155,
            end: 164,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 258,
            end: 262,
        },
        original_span: Span {
            start: 155,
            end: 159,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 263,
            end: 267,
        },
        original_span: Span {
            start: 161,
            end: 163,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 268,
            end: 273,
        },
        original_span: Span {
            start: 165,
            end: 170,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 274,
            end: 283,
        },
        original_span: Span {
            start: 255,
            end: 264,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 276,
            end: 282,
        },
        original_span: Span {
            start: 257,
            end: 263,
        },
    },
]
